@@ -7,6 +7,7 @@
 - Added datetime keys for youtube videos
 - Compat module enhancements
 - Cleantitle module enhancements
+- Request function enhancements for python 3
 - Directory module bugfixes
 - Added replace xml codes function
 - Various other tweaks
